profile layout bug improvements

--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -4,12 +4,13 @@
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
-  grid-auto-rows: minmax(100px, auto);
+  grid-template-rows: minmax(140px, auto) minmax(140px, auto);
   gap: 1em;
   color: $white;
 
   @media screen and (max-width: 600px) {
     gap: 0.75em;
+    grid-template-rows: minmax(100px, auto) minmax(100px, auto) minmax(50px, auto) minmax(50px, auto);
   }
 
   .grid-item {
@@ -154,7 +155,7 @@
   }
 
   .description-container {
-    grid-column: 2/4;
+    grid-column: 2/3;
 
     @media screen and (max-width: 600px) {
       grid-column: 1/4;
@@ -174,11 +175,21 @@
       text-align: justify;
     }
 
+  }
+
+  .date-container {
+    grid-column: 3/4;
+    justify-self: start;
+    align-self: end;
+
+    @media screen and (max-width: 600px) {
+      grid-column: 1/4;
+      grid-row: 4/5;
+    }
+
     .date {
-      margin: 10px 0 0 0;
       color: $yellow;
       font-size: 0.8em;
-      text-align: right;
     }
   }
 }
